--- a/src/index.scss
+++ b/src/index.scss
@@ -115,6 +115,7 @@ body {
   padding-left: .5rem;
   padding-right: .5rem;
   padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .draggable-element {
