--- a/src/index.scss
+++ b/src/index.scss
@@ -506,7 +506,7 @@ body {
         padding-left: 5px;
         margin: 0;
         margin-right: 10px;
-        max-width: 8rem;
+        width: 120px;
         overflow: hidden;
       }
     }
